# mjpg-streamer

mjpg-streamer-experimental/: CMakeLists.txt  README.md
mjpg-streamer-experimental/lib/gauger/: CMakeLists.txt  gauger.cpp  gauger.h
mjpg-streamer-experimental/plugins/: input.h  output.h
mjpg-streamer-experimental/plugins/input_gauger/: CMakeLists.txt  hik_capture.h  input_gauger.cpp  input_gauger.h  log.h
mjpg-streamer-experimental/plugins/input_gauger/gauger/: Gauger.h
mjpg-streamer-experimental/plugins/input_libcamera/: CMakeLists.txt  LibCamera.cpp
mjpg-streamer-experimental/plugins/input_mvs/: CMakeLists.txt  hik_capture.cpp  input_mvs.cpp
mjpg-streamer-experimental/plugins/input_uvc/: CMakeLists.txt
mjpg-streamer-experimental/plugins/output_gauger/: CMakeLists.txt  CppSQLite3.cpp  CppSQLite3.h  Gauger.h  Makefile  cal_control.cpp  cal_control.h  calculation.cpp  calculation.h  cir_queue.cpp  cir_queue.h  cmd.cpp  gauger_observer.h  gauger_types.h  output_gauger.cpp  thread.cpp  thread.h
mjpg-streamer-experimental/plugins/output_gauger_sp/: CMakeLists.txt  Makefile  cmd.cpp  cmd.h  log.c  output_gauger.cpp  output_gauger.h
mjpg-streamer-experimental/plugins/output_http/: httpd.c  httpd.h
mjpg-streamer-experimental/scripts/: S95upl  create_db.sh  create_install.sh  run_unittest.sh  upl_watchdog.sh
